# tues-os

./: .clang-format  .gitignore  LICENSE  README.md
0-finding_max_vas_size/: README.md
0allocator2/: CMakeLists.txt  OAllocator.cpp  OAllocator.h  README.md  main.cpp  sallocator.h  small_allocator.cpp  small_allocator.h
1-allocating_vas/: README.md  main.c
alloc1/: CMakeLists.txt  alloc1.c  alloc1.cpp  alloc1.h  main.c  main.cpp
asm-examples/: main.cpp  main.s  plat.s
examples/: Makefile  README.md  find-max-vas-size.c  valloc.c
examples/asm/: Makefile  main.cpp  plat.s
first_task/: main.c
fs-examples/: CMakeLists.txt  copy.cpp  copy.h  fastcp.cpp  rename.cpp
mm-exaples/: Makefile  find-max-vas-size.c
mp-examples/: Makefile  README.md  array.inc  atomic.cpp  atomic.s  cache_bm.cpp  cachetest.cpp  files.cpp  giantarray.inc  lock.cpp  lock.s  philosophers.cpp  quicksort.cpp  rwlock.cpp  stack.cpp  thread-count.cpp
net-examples/: CMakeLists.txt  groupchat_bozho.c
small-heap/: CMakeLists.txt  README.md  small_heap.cpp  small_heap.h  test_fun.cpp
smallheap/: CMakeLists.txt  README.md  smallheap.cpp  smallheap.h  test.cpp
ualloc/: CMakeLists.txt  README.md  shalloc.h  test.cpp  ualloc.cpp  ualloc.h
